# elastic-multiple-scattering

./: .gitignore  README.md  bump_version.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bump-version.yml  publish.yml  release.yml
ems/: __init__.py
ems/algorithm/: interpolation.py
ems/base/: consts.py  obstacles.py  text_parsing.py
ems/exact/: single_scattering.py
ems/fd/: algorithm.py  coefficients.py  grids.py  obstacles.py  plotting.py  waves.py
experiments/experiment1-2cyl-horiz/: medium.json  numerical.json  obstacles.json
experiments/experiment2-3cyl-scattered-soft/: medium.json  numerical.json  obstacles.json  reference.json
experiments/experiment3-2cyl-vert-mixed-hardness/: driver.py  obstacles.json
experiments/experiment4-4cyl-square/: medium.json  numerical.json  obstacles.json
src/base/: consts.py  exceptions.py  interpolation.py  obstacles.py  waves.py
src/elastic_multiple_scattering/fd/: algorithm.py  coefficients.py
src/emults/fd/: obstacles.py  plotting.py
src/exact/: single_scattering.py
src/fd/: algorithm.py  coefficients.py  grids.py  obstacles.py  waves.py
